# finance

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  .mcp.json.template  .pre-commit-config.yaml  CLAUDE.md  DUPLICATE_CHECK_TEST_REPORT.md  Makefile  README.md  claude-agent-test.py  finance_news_filter.py  pr-3562-design-review.yaml  pyproject.toml  test_duplicate_check.py  test_duplicate_check_v2.py  test_duplicate_check_v3.py
.claude/: agents.md  settings.json  settings.local.json
.claude/agents/: agent-creator.md  agent-expert.md  api-usage-researcher.md  architecture-design-writer.md  ca-claim-extractor.md  ca-fact-checker.md  ca-pattern-verifier.md  ca-report-generator.md  ca-report-parser.md  code-analyzer.md  code-simplifier.md  command-expert.md  comment-analyzer.md  competitive-advantage-critique.md  debugger.md  development-guidelines-writer.md  doc-reviewer.md  error-handling-team-lead.md  error-handling-worker-a.md  error-handling-worker-b.md  error-handling-worker-c.md  feature-implementer.md  file-passing-team-lead.md  file-passing-worker-a.md  file-passing-worker-b.md  finance-article-writer.md  finance-claims-analyzer.md  finance-claims.md  finance-critic-compliance.md  finance-critic-data.md  finance-critic-fact.md  finance-critic-readability.md  finance-critic-structure.md  finance-decisions.md  finance-economic-analysis.md  finance-fact-checker.md  finance-market-data.md  finance-news-ai-cnbc.md  finance-news-ai-nasdaq.md  finance-news-ai-tech.md  (+62 more)
.claude/archive/: steering-skill.md  steering-writer.md
.claude/commands/: analyze-conflicts.md  analyze.md  ca-eval.md  collect-finance-news.md  commit-and-pr.md  dr-stock.md  (+31 more)
analyst/: ai_investment_team.md  dify_workflow_design.md
data/: README.md
docs/: agent-teams-patterns.md  coding-standards.md  development-process.md  mcp-setup.md  news-issue-separation-implementation-memo.md  pr-review-20260112-133821.yaml  pr-review-20260112-135500.yaml  pr-review-20260112-180810.yaml  pr-review-20260112-182723.yaml  pr-review-20260112-182939.yaml  pr-review-20260112-193000.yaml  skill-preload-spec.md  testing-strategy.md  yfinance-best-practices.md
examples/: rss_api_demo.py
exports/: 2026-02-17_ai-investment-team-report_tmp.html
notebook/: Market-Report2.ipynb  Market-Report3.ipynb  ROIC-Preprocessing_ver2.ipynb  claude-agent-test.ipynb  claude-agent-test.py  fred_test.ipynb  fred_test.py  market_analysis.py  market_dashboard.py  market_report_notebook.ipynb  market_report_notebook.py  package-test.ipynb  package-test.py  sector_analysis.py  yfinance_news.ipynb  yfinance_news.py
notebook_sample/: EDINETAコードリスト取得プログラム.ipynb  EDINETAコードリスト取得プログラム.py  EDINETから四半期ごとの情報を取得する.ipynb  EDINETから四半期ごとの情報を取得する.py  Edgar-Tools-test.ipynb  Edgar-Tools-test2.ipynb  Implement_FS_BBG_formulas.ipynb  Implement_FS_BBG_formulas.py  MSCI Indices Analysis.ipynb  MSCI Indices Analysis.py  MSCI Kokusai_Macro-Factor-ver1.ipynb  MSCI Kokusai_Macro-Factor-ver1.py  MSCI Kokusai_Macro-Factor-ver2.ipynb  MSCI Kokusai_Macro-Factor-ver2.py  MSCI Kokusai_Macro-Factor-ver3.ipynb  MSCI Kokusai_Macro-Factor-ver3.py  Macro-data-prepare-FRED.ipynb  Macro-data-prepare-FRED.py  Macro-data-prepare.ipynb  Macro-data-prepare.py  Market-Report-Dev.ipynb  Market-Report2-temp.py  Market-Report2.py  Monitoring_List-Securities.ipynb  Monitoring_List-Securities.py  ROIC-Analysis_ver1.ipynb  ROIC-Analysis_ver1.py  ROIC-Analysis_ver2.ipynb  ROIC-Analysis_ver2.py  ROIC-Analysis_ver3.ipynb  ROIC-Analysis_ver3.py  ROIC-Preprocessing_ver1.ipynb  ROIC-Preprocessing_ver1.py  ROIC-Preprocessing_ver2.ipynb  ROIC-Preprocessing_ver2.py  ROIC-Preprocessing_ver3.ipynb  ROIC-Preprocessing_ver3.py  ROIC_Analysis_ver2.ipynb  ROIC_Analysis_ver2.py  ROIC_Preprocessing_ver2.ipynb  (+25 more)
research/: asia_ex_japan_equity_research_guide.md
scripts/: benchmark_performance.py  check_circular_deps.py  check_project_sync.py  collect_finance_news.py  collect_finance_news_index.py  collect_finance_news_macro.py  collect_finance_news_sector.py  collect_finance_news_stock.py  collect_market_performance.py  convert_notebooks.py  market_report_data.py  prepare_news_session.py  weekly_comment_data.py
src/utils_core/: README.md  __init__.py  errors.py  pyproject.toml  settings.py  types.py
src/utils_core/docs/: logging_config_comparison.md  project.md
src/utils_core/logging/: __init__.py  config.py
src_sample/: CLAUDE.md  GEMINI.md  ROIC_make_data_files.md  ROIC_make_data_files.py  ROIC_make_data_files_ver2.py  analysis-report-20260114.md  analysis-report-20260114.yaml  bloomberg_utils.py  calculate_performance_metrics.py  calendar_utils.py  data_check_utils.py  data_prepare.py  database_schema.sql  database_utils.py  ddg_search.py  edgar_utils.py  etf_dot_com.py  factset_downloaded_data_utils.py  factset_utils.py  google_drive_utils.py  implement_FS_BBG_formulas_utils.py  init_databases.py  make_factor.py  make_financial_factors.py  market_report_utils.py  path_base_bootstrap.py  roic_analysis.py  token.json  us_treasury.py  validate_data.py  verify_bloomberg_utils.py  weekly_insights.py  weekly_report_generator.py  weekly_report_generator.py.backup
tests/: conftest.py
(+1364 files in other folders)
